orders page && payments in admin (users)

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -64,6 +64,9 @@
 
 @import 'includes/header';
 
+@import 'dashboard/orders';
+@import 'dashboard/order_list';
+
 @import 'shop/product';
 
 // Specific page's styles
