--- a/src/resources/sass/dashboard/order_list.scss
+++ b/src/resources/sass/dashboard/order_list.scss
@@ -123,6 +123,10 @@
                 width: 55px;
                 height: 55px;
                 background-color: #E0E6F2;
+
+                img {
+                    width: 100%;
+                }
             }
 
             &_descr {
