--- a/src/resources/sass/components/_support-chat.scss
+++ b/src/resources/sass/components/_support-chat.scss
@@ -1,6 +1,3 @@
-.umnico-widget-wrapper {
-    .widget__preview-block {
-        top: 0;
-    }
+div.widget__preview-block.widget__preview-block--expand-contacts {
+    top: 0;
 }
-
