--- a/src/resources/sass/shop/product.scss
+++ b/src/resources/sass/shop/product.scss
@@ -201,6 +201,7 @@
                 font-size: 12px;
                 margin: 0 0 5px;
                 color: #B9B9B9;
+                max-width: 170px;
             }
         }
 
