--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -63,6 +63,7 @@
 @import 'banners/banner-timer';
 
 @import 'includes/header';
+@import 'includes/feedbacks';
 
 @import 'dashboard/orders';
 @import 'dashboard/order_list';
