107. Change sizes design in stocks admin panel

--- a/src/resources/sass/admin/admin.scss
+++ b/src/resources/sass/admin/admin.scss
@@ -35,3 +35,9 @@
     border: 1px solid rgba(50, 40, 250, 0.6) !important;
     box-shadow: 0 0 10px 0 rgba(50, 40, 250, 0.6) !important;
 }
+
+span.stock-size {
+    color: #fff;
+    background: #222;
+    padding: 0 2px;
+}
