--- a/src/resources/sass/_styles.scss
+++ b/src/resources/sass/_styles.scss
@@ -478,6 +478,7 @@ input.form-check-input:checked {
     &~.additional-form-check-info {
         display: inline-block;
     }
+
     &~div.additional-form-check-info {
         display: block;
     }
@@ -543,11 +544,16 @@ span {
 
     // &.price { }
     &.new_price {
-        color: #D22020;
+        font-weight: 400;
+        color: #373936;
+        font-size: 14px;
     }
 
     &.old_price {
+        font-weight: 400;
+        color: #B0B0B0;
         text-decoration: line-through;
+        margin: 0 4px 0 0;
     }
 }
 
@@ -600,11 +606,17 @@ span {
     }
 
     &.product-label-sale {
-        background: $red;
+        background: transparent;
+        border: none;
+        color: #73383E;
+        font-weight: 600;
     }
 
     &.product-label-new {
-        background: $success
+        border: 1px solid #373936;
+        color: #373936;
+        font-weight: 600;
+        background: transparent;
     }
 }
 
